# Rundale

./: .actrc  .dockerignore  .env.example  .gitattributes  .gitignore  .secrets.example  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  THIRD_PARTY_NOTICES.md  THIRD_PARTY_NOTICES.rust.md  THIRD_PARTY_NOTICES.ui.md  about.hbs  about.toml  justfile  parish.example.toml  parish.toml.example  railway.toml
.agent/: witness-log.md
.agents/: performance-review.md  ux-review.md
.claude/: launch.json  settings.json
.claude/hooks/: PostToolUse--compile-check.sh  PostToolUse--dep-audit-reminder.sh  PreToolUse--weekday-commit-block.sh  SessionStart--compact-context.sh  Stop--coverage-reminder.sh  Stop--design-doc-reminder.sh  Stop--doc-staleness.sh  Stop--harness-reminder.sh  Stop--quality-gates.sh  Stop--screenshot-reminder.sh  SubagentStart--tauri-server-check.sh  UserPromptSubmit--commit-msg-check.sh  WorktreeCreate--worktree-compile.sh  auto-fmt.sh  commit-msg-check.sh  compact-context.sh  compile-check.sh  coverage-reminder.sh  dep-audit-reminder.sh  design-doc-reminder.sh  doc-staleness.sh  harness-reminder.sh  notify.sh  protect-files.sh  quality-gates.sh  screenshot-reminder.sh  tauri-server-check.sh  worktree-compile.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: labeler.yml  triage-labels.json
.github/commands/: gemini-review.toml
.github/workflows/: audit.yml  ci.yml  cloudflare-cleanup.yml  codex-issue-autofix.yml  gemini-dispatch.yml  gemini-invoke.yml  gemini-review.yml  (+7 more)
.jules/: bolt.md
crates/parish-cli/: Cargo.toml
crates/parish-cli/src/: app.rs  config.rs  headless.rs  main.rs  testing.rs
crates/parish-cli/tests/: eval_baselines.rs  game_harness_integration.rs  headless_script_tests.rs  persistence_integration.rs  world_graph_integration.rs
crates/parish-config/: Cargo.toml
crates/parish-config/src/: engine.rs  flags.rs  lib.rs  presets.rs  provider.rs
crates/parish-core/: Cargo.toml
crates/parish-core/prompts/: npc_tier1.prompt.yml
crates/parish-core/src/: backend_init.rs  config.rs  debug_snapshot.rs  game_mod.rs  game_session.rs  inference_guard.rs  lib.rs  loading.rs
crates/parish-core/src/config/: engine.rs  provider.rs
crates/parish-core/src/editor/: format.rs  live_reload.rs  maintenance_tool.rs  mod.rs  mod_io.rs  persist.rs  save_inspect.rs  types.rs  validate.rs
crates/parish-core/src/inference/: client.rs  mod.rs  openai_client.rs  setup.rs
crates/parish-core/src/input/: mod.rs
crates/parish-core/src/ipc/: commands.rs  config.rs  editor.rs  handlers.rs  mod.rs  streaming.rs  types.rs
crates/parish-core/src/npc/: anachronism.rs  autonomous.rs  conversation.rs  data.rs  gossip.rs  manager.rs  memory.rs  mod.rs  overhear.rs  reactions.rs  ticks.rs  tier4.rs  transitions.rs  types.rs
crates/parish-core/src/persistence/: database.rs  journal.rs  journal_bridge.rs  mod.rs  picker.rs  snapshot.rs
crates/parish-core/src/prompts/: mod.rs
crates/parish-core/src/world/: description.rs  encounter.rs  graph.rs  mod.rs  palette.rs  time.rs  weather.rs
crates/parish-core/tests/: architecture_fitness.rs  async_llm_integration.rs
crates/parish-inference/: Cargo.toml
crates/parish-inference/src/: anthropic_client.rs  client.rs  lib.rs  openai_client.rs  setup.rs  simulator.rs  utf8_stream.rs
crates/parish-inference/tests/: http_mock_tests.rs
crates/parish-input/: Cargo.toml
crates/parish-input/src/: commands.rs  intent_llm.rs  intent_local.rs  intent_types.rs  lib.rs  mention.rs  parser.rs
crates/parish-input/tests/: llm_fallback_integration.rs
crates/parish-npc/: Cargo.toml
crates/parish-npc-cli/: Cargo.toml
crates/parish-npc-cli/src/: main.rs
crates/parish-npc/src/: anachronism.rs  autonomous.rs  banshee.rs  data.rs  lib.rs  manager.rs  memory.rs  mood.rs  overhear.rs  reactions.rs  ticks.rs  tier4.rs  transitions.rs  types.rs
crates/parish-npc/tests/: gossip_integration.rs  tier2_llm_integration.rs
crates/parish-persistence/: Cargo.toml
crates/parish-persistence/src/: database.rs  journal.rs  journal_bridge.rs  lib.rs  lock.rs  picker.rs  snapshot.rs
crates/parish-server/: Cargo.toml
crates/parish-server/src/: auth.rs  cf_auth.rs  editor_routes.rs  lib.rs  middleware.rs  routes.rs  session.rs  state.rs  streaming.rs  ws.rs
crates/parish-server/tests/: auth_guard.rs  isolation.rs  security_headers.rs
crates/parish-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/parish-tauri/capabilities/: default.json
crates/parish-tauri/src/: commands.rs  editor_commands.rs  events.rs  lib.rs
crates/parish-types/: Cargo.toml
crates/parish-types/src/: conversation.rs  dice.rs  error.rs  events.rs  gossip.rs  ids.rs  lib.rs  time.rs
crates/parish-world/: Cargo.toml
crates/parish-world/examples/: show_encounter_prompt.rs
crates/parish-world/src/: description.rs  encounter.rs  geo.rs  graph.rs  lib.rs  movement.rs  transport.rs  weather.rs
data/: npcs.json  parish.json
deploy/: Dockerfile  entrypoint.sh  railway-watchdog.sh
docs/: features.md  index.md  journal.md  known-issues.md  linux-setup.md  macos-setup.md  maybe-bad-ideas.md  oauth-setup.md  windows-setup.md
parish/: Cargo.toml
parish/crates/parish-geo-tool/: Cargo.toml
parish/crates/parish-geo-tool/src/: merge.rs  output.rs  pipeline.rs
parish/crates/parish-geo-tool/src/historic/: discover.rs
parish/crates/parish-rag/: Cargo.toml  README.md
parish/crates/parish-rag/src/: corpus.rs  hash_embedder.rs  lib.rs  ollama_embedder.rs
parish/crates/parish-types/: Cargo.toml
parish/crates/parish-types/src/: emotion.rs  emotion_leaves.rs  ids.rs  lib.rs
scripts/: check-doc-paths.sh  loc_projection.py
src/: app.rs  config.rs  debug.rs  error.rs  headless.rs  lib.rs  loading.rs  main.rs  testing.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tests/: game_harness_integration.rs  headless_script_tests.rs  npc_integration.rs  persistence_integration.rs  world_graph_integration.rs
ui/: README.md  package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.ts
(+566 files in other folders)
