[workspace]
resolver = "2"
members = [
    "crates/parish-core",
    "crates/parish-server",
    "crates/parish-cli",
    "crates/parish-tauri",
    "crates/geo-tool",
    "crates/parish-types",
    "crates/parish-config",
    "crates/parish-inference",
    "crates/parish-world",
    "crates/parish-npc",
    "crates/parish-persistence",
    "crates/parish-input",
]
default-members = ["crates/parish-cli"]

[profile.release]
opt-level = 3
lto = true
