[package]
name = "parish-config"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
publish = false
description = "Engine and LLM-provider configuration loader for the Parish engine"

[dependencies]
parish-types = { path = "../parish-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dotenvy = "0.15"
tracing = "0.1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
