[package]
name = "parish-core"
version = "0.1.0"
edition = "2024"

[dependencies]
parish-types = { path = "../parish-types" }
parish-config = { path = "../parish-config" }
parish-inference = { path = "../parish-inference" }
parish-world = { path = "../parish-world" }
parish-npc = { path = "../parish-npc" }
parish-persistence = { path = "../parish-persistence" }
parish-input = { path = "../parish-input" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
dotenvy = "0.15"
strsim = "0.11"
rand = "0.8"
regex = "1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
rand_chacha = "0.3"
wiremock = "0.6"
