[package]
name = "parish-inference"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
publish = false
description = "LLM inference queue and provider clients (OpenAI/Anthropic/simulator) for Parish"

[dependencies]
parish-types = { path = "../parish-types" }
parish-config = { path = "../parish-config" }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
chrono = "0.4"
governor = "0.10"

[dev-dependencies]
wiremock = "0.6"
