[package]
name = "parish-input"
version = "0.1.0"
edition = "2024"

[dependencies]
parish-types = { path = "../parish-types" }
parish-config = { path = "../parish-config" }
parish-inference = { path = "../parish-inference" }
serde = { version = "1", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
serde_json = "1"
