[package]
name = "parish-input"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
publish = false
description = "Player input parsing and command interpretation for the Parish engine"

[dependencies]
parish-types = { path = "../parish-types" }
parish-config = { path = "../parish-config" }
parish-inference = { path = "../parish-inference" }
serde = { version = "1", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
serde_json = "1"
wiremock = "0.6"
tokio = { version = "1", features = ["full"] }
parish-inference = { path = "../parish-inference" }
