[package]
name = "parish-npc-cli"
version = "0.1.0"
edition = "2024"
description = "NPC world builder and inspection utility for Parish/Rundale (#433)"

[[bin]]
name = "parish-npc"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
