[package]
name = "parish-npc"
version = "0.1.0"
edition = "2024"
description = "NPC simulation, memory, schedules, and reaction systems for the Parish engine"

[dependencies]
parish-types = { path = "../parish-types" }
parish-config = { path = "../parish-config" }
parish-inference = { path = "../parish-inference" }
parish-world = { path = "../parish-world" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
regex = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
rand_chacha = "0.9"
tempfile = "3"
wiremock = "0.6"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
