[package]
name = "parish-persistence"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
publish = false
description = "SQLite save/load with WAL journal and branching saves for the Parish engine"

[dependencies]
parish-types = { path = "../parish-types" }
parish-world = { path = "../parish-world" }
parish-npc = { path = "../parish-npc" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
