[package]
name = "parish-server"
version = "0.1.0"
edition = "2024"
description = "Axum web server for Parish — serves the Svelte UI in a browser for testing"

[dependencies]
parish-core = { path = "../parish-core" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
rand = "0.8"
