[package]
name = "parish-world"
version = "0.1.0"
edition = "2024"

[dependencies]
parish-types = { path = "../parish-types" }
parish-config = { path = "../parish-config" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
strsim = "0.11"
rand = "0.9"
tokio = { version = "1", features = ["sync"] }
toml = "0.8"
