[package]
name = "parish-geo-tool"
version = "0.1.0"
edition = "2024"
description = "Download OSM data and convert to Parish world graph format"
license = "GPL-3.0-only"
publish = false

[[bin]]
name = "parish-geo-tool"
path = "src/main.rs"

[dependencies]
parish-core = { path = "../parish-core" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
