[package]
name = "parish-types"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
publish = false
description = "Foundational shared types for the Parish engine (zero internal deps)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["sync"] }
rand = "0.9"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
